--- a/50-abstraction-practical-example/src/main/resources/scene/MainScene.fxml
+++ b/50-abstraction-practical-example/src/main/resources/scene/MainScene.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.dep13.oop.abstraction.controller.MainSceneController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="569.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.oop.abstraction.controller.MainSceneController">
+   <children>
+      <Button layoutX="491.0" layoutY="14.0" mnemonicParsing="false" text="NEW CUSTOMER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+      <GridPane hgap="5.0" layoutX="14.0" layoutY="51.0" vgap="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="60.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="74.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="527.0" minWidth="10.0" prefWidth="527.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <TextField editable="false" promptText="Generated ID" GridPane.columnIndex="1" />
+            <TextField prefHeight="26.0" prefWidth="255.0" promptText="Eg. Kasun Sampath" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField prefHeight="26.0" prefWidth="255.0" promptText="Eg. Grace Peires Road, Panadura" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="ID: " />
+            <Label text="NAME: " GridPane.rowIndex="1" />
+            <Label text="ADDRESS: " GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <Label layoutX="15.0" layoutY="16.0" text="Practical Example of Abstraction">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Button defaultButton="true" layoutX="89.0" layoutY="169.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="SAVE" />
+      <Button layoutX="173.0" layoutY="169.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="REMOVE" />
+      <TableView layoutX="14.0" layoutY="209.0" prefHeight="345.0" prefWidth="596.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="209.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="ID" />
+          <TableColumn prefWidth="192.0" text="NAME" />
+            <TableColumn prefWidth="289.0" text="ADDRESS" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
