--- a/50-abstraction-practical-example/src/main/resources/scene/MainScene.fxml
+++ b/50-abstraction-practical-example/src/main/resources/scene/MainScene.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="569.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep13.oop.abstraction.controller.MainSceneController">
    <children>
-      <Button layoutX="491.0" layoutY="14.0" mnemonicParsing="false" text="NEW CUSTOMER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+      <Button fx:id="btnNewCustomer" layoutX="491.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnNewCustomerOnAction" text="NEW CUSTOMER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
       <GridPane hgap="5.0" layoutX="14.0" layoutY="51.0" vgap="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="60.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="74.0" />
@@ -26,9 +26,9 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField editable="false" promptText="Generated ID" GridPane.columnIndex="1" />
-            <TextField prefHeight="26.0" prefWidth="255.0" promptText="Eg. Kasun Sampath" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefHeight="26.0" prefWidth="255.0" promptText="Eg. Grace Peires Road, Panadura" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtId" editable="false" promptText="Generated ID" GridPane.columnIndex="1" />
+            <TextField fx:id="txtName" prefHeight="26.0" prefWidth="255.0" promptText="Eg. Kasun Sampath" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtAddress" prefHeight="26.0" prefWidth="255.0" promptText="Eg. Grace Peires Road, Panadura" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="ID: " />
             <Label text="NAME: " GridPane.rowIndex="1" />
             <Label text="ADDRESS: " GridPane.rowIndex="2" />
@@ -39,9 +39,9 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button defaultButton="true" layoutX="89.0" layoutY="169.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="SAVE" />
-      <Button layoutX="173.0" layoutY="169.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="REMOVE" />
-      <TableView layoutX="14.0" layoutY="209.0" prefHeight="345.0" prefWidth="596.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="209.0">
+      <Button fx:id="btnSave" defaultButton="true" layoutX="89.0" layoutY="169.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="26.0" prefWidth="73.0" text="SAVE" />
+      <Button fx:id="btnRemove" layoutX="173.0" layoutY="169.0" mnemonicParsing="false" onAction="#btnRemoveOnAction" prefHeight="26.0" prefWidth="73.0" text="REMOVE" />
+      <TableView fx:id="tblCustomers" layoutX="14.0" layoutY="209.0" prefHeight="345.0" prefWidth="596.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="209.0">
         <columns>
           <TableColumn prefWidth="75.0" text="ID" />
           <TableColumn prefWidth="192.0" text="NAME" />
